--- a/js/package.json
+++ b/js/package.json
@@ -4,7 +4,8 @@
   "description": "REST API service for Crossfit Training Application.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "not_test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
@@ -26,9 +27,12 @@
   },
   "homepage": "https://github.com/test0n3/rest-api-js-python-ruby#readme",
   "devDependencies": {
+    "jest": "^29.6.1",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv-safe": "^8.2.0",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
